; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_patch_realtek.c_alc_codec_rename_from_preset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_patch_realtek.c_alc_codec_rename_from_preset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.alc_codec_rename_table = type { i64, i32, i32, i32 }
%struct.hda_codec = type { i64 }

@rename_tbl = common dso_local global %struct.alc_codec_rename_table* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hda_codec*)* @alc_codec_rename_from_preset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alc_codec_rename_from_preset(%struct.hda_codec* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.hda_codec*, align 8
  %4 = alloca %struct.alc_codec_rename_table*, align 8
  store %struct.hda_codec* %0, %struct.hda_codec** %3, align 8
  %5 = load %struct.alc_codec_rename_table*, %struct.alc_codec_rename_table** @rename_tbl, align 8
  store %struct.alc_codec_rename_table* %5, %struct.alc_codec_rename_table** %4, align 8
  br label %6

6:                                                ; preds = %38, %1
  %7 = load %struct.alc_codec_rename_table*, %struct.alc_codec_rename_table** %4, align 8
  %8 = getelementptr inbounds %struct.alc_codec_rename_table, %struct.alc_codec_rename_table* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %41

11:                                               ; preds = %6
  %12 = load %struct.alc_codec_rename_table*, %struct.alc_codec_rename_table** %4, align 8
  %13 = getelementptr inbounds %struct.alc_codec_rename_table, %struct.alc_codec_rename_table* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.hda_codec*, %struct.hda_codec** %3, align 8
  %16 = getelementptr inbounds %struct.hda_codec, %struct.hda_codec* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %14, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %11
  br label %38

20:                                               ; preds = %11
  %21 = load %struct.hda_codec*, %struct.hda_codec** %3, align 8
  %22 = call i32 @alc_get_coef0(%struct.hda_codec* %21)
  %23 = load %struct.alc_codec_rename_table*, %struct.alc_codec_rename_table** %4, align 8
  %24 = getelementptr inbounds %struct.alc_codec_rename_table, %struct.alc_codec_rename_table* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = and i32 %22, %25
  %27 = load %struct.alc_codec_rename_table*, %struct.alc_codec_rename_table** %4, align 8
  %28 = getelementptr inbounds %struct.alc_codec_rename_table, %struct.alc_codec_rename_table* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = icmp eq i32 %26, %29
  br i1 %30, label %31, label %37

31:                                               ; preds = %20
  %32 = load %struct.hda_codec*, %struct.hda_codec** %3, align 8
  %33 = load %struct.alc_codec_rename_table*, %struct.alc_codec_rename_table** %4, align 8
  %34 = getelementptr inbounds %struct.alc_codec_rename_table, %struct.alc_codec_rename_table* %33, i32 0, i32 3
  %35 = load i32, i32* %34, align 8
  %36 = call i32 @alc_codec_rename(%struct.hda_codec* %32, i32 %35)
  store i32 %36, i32* %2, align 4
  br label %42

37:                                               ; preds = %20
  br label %38

38:                                               ; preds = %37, %19
  %39 = load %struct.alc_codec_rename_table*, %struct.alc_codec_rename_table** %4, align 8
  %40 = getelementptr inbounds %struct.alc_codec_rename_table, %struct.alc_codec_rename_table* %39, i32 1
  store %struct.alc_codec_rename_table* %40, %struct.alc_codec_rename_table** %4, align 8
  br label %6

41:                                               ; preds = %6
  store i32 0, i32* %2, align 4
  br label %42

42:                                               ; preds = %41, %31
  %43 = load i32, i32* %2, align 4
  ret i32 %43
}

declare dso_local i32 @alc_get_coef0(%struct.hda_codec*) #1

declare dso_local i32 @alc_codec_rename(%struct.hda_codec*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
